style: make layout wrapper fluid and prevent horizontal overflow

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -40,7 +40,9 @@
   max-width: 100%;
   
   @media screen and (min-width: 900px) {
+    width: auto;
     max-width: 720px;
+    min-width: 0;
   }
 }
 
